<resources>
    <string name="app_name">VESTIR</string>
    <string name="orders_summary">ORDERS SUMMARY</string>
    <string name="new_update_order">NEW/UPDATE ORDER</string>
    <string name="new_update_client">NEW/UPDATE CLIENT</string>
    <string name="name">NAME</string>
    <string name="contact">CONTACT</string>
    <string name="address">ADDRESS</string>
    <string name="reference">REFERENCE</string>
    <string name="new_order_next">NEW ORDER/NEXT</string>
    <string name="order_list">ORDER LIST</string>

    <string name="submit">Submit</string>
    <string name="edit_measurement">EDIT</string>
    <string name="transaction">TRANSACTION</string>
    <string name="transaction_history">TRANSACTION HISTORY</string>
    <string name="measurements">MEASUREMENTS</string>
    <string name="past_norders">past \norders</string>
    <string name="active_norders">Active \norders</string>


    <!--create order-->
    <string name="str_style">STYLE</string>
    <string name="str_desc">DESC</string>
    <string name="str_status">STATUS</string>
    <string name="hint_measurements">(MEASUREMENTS)</string>
    <string name="str_measurements">MEASUREMENTS</string>
    <string name="str_edit">EDIT</string>
    <string name="str_order">ORDER</string>
    <string name="str_trial">TRIAL</string>
    <string name="str_delivery">DELIVERY</string>
    <string name="str_final">FINAL</string>
    <string name="str_quote">QUOTE</string>
    <string name="str_cost">COST</string>
    <string name="str_view">VIEW</string>
    <string name="str_submit">SUBMIT</string>
    <string name="str_update">UPDATE</string>

    <string name="status_active">Active</string>
    <string name="status_trial_done">Trial Done</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_paid">Paid</string>

    <string-array name="statusList">
        <item>@string/status_active</item>
        <item>@string/status_trial_done</item>
        <item>@string/status_delivered</item>
        <item>@string/status_paid</item>
    </string-array>

    <!--order list by customer-->
    <string name="str_search">Search</string>
    <string name="new_view_update_order">NEW / VIEW / UPDATE ORDER</string>
    <string name="new_order">New Order</string>
    <string name="view_order">View Order</string>
    <string name="update_order">Update Order</string>
    <string name="open_cost_page">Open Cost Page</string>

    <string name="update">Update</string>
    <string name="cost_page">COST PAGE</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_cancel">Cancel</string>
    <string name="menu_order_date">Order Date</string>
    <string name="menu_trial_date">Trial Date</string>
    <string name="menu_delivery_date">Delivery Date</string>
    <string name="menu_search_by_client_name">Client Name</string>

    <!--order summary-->
    <string name="str_all_order">All Order</string>
    <string name="str_active_order">Active Order</string>
    <string name="str_trial_done_order">Trial Done Order</string>
    <string name="str_delivered_order">Delivered Order</string>
    <string name="str_paid_order">Paid Order</string>

    <!--invoice-->
    <string name="str_invoice">Invoice</string>
    <string name="str_total_advance">TOTAL ADVANCE</string>
    <string name="str_final_amount">FINAL AMOUNT</string>

    <!--  Time sheet-->
    <string name="style">STYLE</string>
    <string name="expenses">EXPENSES</string>
    <string name="time">TIME</string>
    <string name="total">TOTAL</string>
    <string name="advance">ADVANCE</string>
    <string name="manual">MANUAL</string>
    <string name="time_sheet">TIME SHEET</string>
    <string name="timesheet">TIMESHEET</string>
    <string name="staff">STAFF</string>
    <string name="date">DATE</string>
    <string name="unit">UNIT</string>

    <string-array name="staff_list">
        <item>Akash</item>
        <item>Mohan</item>
        <item>Parin</item>
        <item>XYZ</item>
    </string-array>

    <string name="str_salary">SALARY</string>
    <string name="str_paid">PAID</string>
    <string name="str_add">ADD</string>
    <string name="str_type">TYPE</string>
    <string name="str_mode">MODE</string>
    <string name="str_place">PLACE</string>
    <string name="str_cash">CASH</string>
    <string name="str_online">ONLINE</string>

    <string-array name="vestire_enpense_type">
        <item>Rent</item>
        <item>Travel</item>
        <item>electricity</item>
        <item>Inhouse</item>
        <item>others</item>
    </string-array>

    <!--Transaction-->
    <string name="particular">PARTICULAR</string>
    <string-array name="particular_type">
        <item>Fabric</item>
        <item>Lining</item>
        <item>Stiching</item>
        <item>Laces</item>
        <item>Embroidery</item>
        <item>Others</item>
        <item>Payment</item>
        <item>Salary</item>
        <item>Vestir Expense</item>
    </string-array>

</resources>
