<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DashboardActivity">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/titleNewClient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/new_update_client"
            style="@style/title_background"
            />

        <TextView
            android:id="@+id/titleNewOrder"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_height="80dp"
            android:text="@string/new_update_order"
            style="@style/title_background"
            />

        <TextView
            android:id="@+id/titleOrderSummary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/orders_summary"
            android:layout_marginLeft="8dp"
            style="@style/title_background"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/std_padding"
        android:paddingRight="@dimen/std_padding"
        android:layout_marginTop="@dimen/std_padding">


        <TextView
            android:id="@+id/titleTransaction"
            style="@style/title_background"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/transaction" />

        <TextView
            android:id="@+id/titleTimeSheet"
            style="@style/title_background"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:text="@string/time_sheet"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/titleTransactionHistory"
            style="@style/title_background"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/transaction_history" />


    </LinearLayout>

</LinearLayout>