<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NewClientActivity">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/std_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/name"
                    />

                <EditText
                    android:id="@+id/etName"
                    style="@style/editText_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/contact"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/etContact"
                    style="@style/editText_background"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="number"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/address"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/etAddress"
                    style="@style/editText_background"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/reference"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/etReference"
                    style="@style/editText_background"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurements"

                    />
                <CheckBox
                    android:id="@+id/cbMeasurement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_measurement"
                    android:id="@+id/txtEditMeasurement"
                    android:paddingLeft="@dimen/small_padding"
                    android:paddingRight="@dimen/small_padding"
                    android:background="@drawable/title_bg"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/large_padding">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnActiveOrders"
                    android:text="@string/active_norders"
                    android:padding="@dimen/small_padding"
                    android:background="@drawable/title_bg"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/double_extra_large"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPastOrders"
                    android:text="@string/past_norders"
                    android:padding="@dimen/small_padding"
                    android:background="@drawable/title_bg"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSubmit"
                android:layout_marginTop="@dimen/large_padding"
                android:gravity="center"
                android:background="@drawable/title_bg"
                android:padding="12dp"
                android:text="@string/submit"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>