<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_new_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:textSize="@dimen/textsize_16sp"
        android:text="@string/new_update_order"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginLeft="@dimen/std_padding"
        android:layout_marginRight="@dimen/std_padding"
        app:layout_constraintTop_toBottomOf="@id/txt_new_order"
        android:layout_marginTop="@dimen/std_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="@dimen/textsize_16sp"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/etName"
            style="@style/editText_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_name"
            android:textSize="@dimen/textsize_16sp"
            android:visibility="gone"
            android:paddingLeft="@dimen/std_padding"
            android:paddingRight="@dimen/std_padding"
            android:layout_marginLeft="@dimen/std_padding"
            android:background="@drawable/title_bg"
            android:text="@string/str_search"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_order_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:reverseLayout="false"
        android:layout_marginTop="@dimen/size_40dp"
        android:layout_marginBottom="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/ll_name"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="@dimen/large_padding"
        android:gravity="center"
        android:textSize="@dimen/textsize_16sp"
        android:background="@drawable/title_bg"
        android:layout_margin="@dimen/std_padding"
        android:text="@string/new_order"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>